Project3/y.output
Terminals which are not used

   BREAK
   CASE
   CLASS
   CONTINUE
   DO
   EXIT
   NIL
   REPEAT
   TYPE


State 50 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 13 shift/reduce
State 108 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 program: OBJECT ID @1 '{' var_const_decs method_decs '}'

    3 var_const_decs: var_const_dec var_const_decs
    4               | /* empty */

    5 var_const_dec: const_dec
    6              | var_dec

    7 const_dec: VAL ID ':' type '=' expression
    8          | VAL ID '=' expression

    9 var_dec: VAR ID ':' type '=' expression
   10        | VAR ID ':' type
   11        | VAR ID '=' expression
   12        | VAR ID ':' type '[' CONST_INT ']'

   13 type: INT
   14     | FLOAT
   15     | CHAR
   16     | STRING
   17     | BOOLEAN

   18 method_decs: method_dec method_decs
   19            | method_dec

   20 @2: /* empty */

   21 @3: /* empty */

   22 method_dec: DEF ID @2 '(' formal_args ')' return_type @3 '{' var_const_decs_statements '}'

   23 @4: /* empty */

   24 method_dec: DEF ID return_type @4 '{' var_const_decs_statements '}'

   25 var_const_decs_statements: var_const_decs_statement var_const_decs_statements
   26                          | /* empty */

   27 var_const_decs_statement: var_const_dec
   28                         | statement

   29 return_type: ':' type
   30            | /* empty */

   31 formal_args: arg
   32            | arg ',' formal_args
   33            | /* empty */

   34 arg: ID ':' type

   35 statements: statement statements
   36           | /* empty */

   37 statement: simple_statement
   38          | block
   39          | condition
   40          | loop
   41          | procedure_invocation

   42 simple_statement: ID '=' expression
   43                 | ID '[' expression ']' '=' expression

   44 @5: /* empty */

   45 simple_statement: PRINT @5 expression

   46 @6: /* empty */

   47 simple_statement: PRINTLN @6 expression
   48                 | READ ID
   49                 | RETURN expression
   50                 | RETURN

   51 expression: '(' expression ')'
   52           | literal_const
   53           | function_invocation
   54           | ID
   55           | ID '[' expression ']'
   56           | '-' expression
   57           | expression '%' expression
   58           | expression '*' expression
   59           | expression '/' expression
   60           | expression '+' expression
   61           | expression '-' expression
   62           | expression LT expression
   63           | expression LE expression
   64           | expression GT expression
   65           | expression GE expression
   66           | expression EE expression
   67           | expression NE expression
   68           | NOT expression
   69           | expression AND expression
   70           | expression OR expression

   71 literal_const: CONST_INT
   72              | CONST_REAL
   73              | CONST_CHAR
   74              | CONST_STRING
   75              | CONST_BOOL

   76 function_invocation: ID '(' comma_separated_expression ')'

   77 comma_separated_expression: expression
   78                           | expression ',' comma_separated_expression
   79                           | /* empty */

   80 @7: /* empty */

   81 block: '{' @7 var_const_decs one_or_more_statements '}'

   82 one_or_more_statements: statement statements

   83 @8: /* empty */

   84 condition: IF '(' expression ')' @8 else

   85 @9: /* empty */

   86 else: block_or_simple_statement ELSE @9 block_or_simple_statement
   87     | block_or_simple_statement

   88 block_or_simple_statement: block
   89                          | simple_statement

   90 @10: /* empty */

   91 @11: /* empty */

   92 loop: WHILE @10 '(' expression ')' @11 block_or_simple_statement

   93 @12: /* empty */

   94 loop: FOR '(' ID LT '-' CONST_INT TO CONST_INT ')' @12 block_or_simple_statement

   95 procedure_invocation: ID
   96                     | ID '(' comma_separated_expression ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 57
'(' (40) 22 51 76 84 92 94 96
')' (41) 22 51 76 84 92 94 96
'*' (42) 58
'+' (43) 60
',' (44) 32 78
'-' (45) 56 61 94
'/' (47) 59
':' (58) 7 9 10 12 29 34
'=' (61) 7 8 9 11 42 43
'[' (91) 12 43 55
']' (93) 12 43 55
'{' (123) 2 22 24 81
'}' (125) 2 22 24 81
error (256)
BOOLEAN (258) 17
BREAK (259)
CHAR (260) 15
CASE (261)
CLASS (262)
CONTINUE (263)
DEF (264) 22 24
DO (265)
ELSE (266) 86
EXIT (267)
FLOAT (268) 14
FOR (269) 94
IF (270) 84
INT (271) 13
NIL (272)
OBJECT (273) 2
PRINT (274) 45
PRINTLN (275) 47
REPEAT (276)
RETURN (277) 49 50
STRING (278) 16
TO (279) 94
TYPE (280)
VAL (281) 7 8
VAR (282) 9 10 11 12
WHILE (283) 92
READ (284) 48
LT (285) 62 94
LE (286) 63
GT (287) 64
GE (288) 65
NE (289) 67
EE (290) 66
AND (291) 69
OR (292) 70
NOT (293) 68
ID (294) 2 7 8 9 10 11 12 22 24 34 42 43 48 54 55 76 94 95 96
CONST_BOOL (295) 75
CONST_INT (296) 12 71 94
CONST_REAL (297) 72
CONST_STRING (298) 74
CONST_CHAR (299) 73
UMINUS (300)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 2, on right: 0
@1 (62)
    on left: 1, on right: 2
var_const_decs (63)
    on left: 3 4, on right: 2 3 81
var_const_dec (64)
    on left: 5 6, on right: 3 27
const_dec (65)
    on left: 7 8, on right: 5
var_dec (66)
    on left: 9 10 11 12, on right: 6
type (67)
    on left: 13 14 15 16 17, on right: 7 9 10 12 29 34
method_decs (68)
    on left: 18 19, on right: 2 18
method_dec (69)
    on left: 22 24, on right: 18 19
@2 (70)
    on left: 20, on right: 22
@3 (71)
    on left: 21, on right: 22
@4 (72)
    on left: 23, on right: 24
var_const_decs_statements (73)
    on left: 25 26, on right: 22 24 25
var_const_decs_statement (74)
    on left: 27 28, on right: 25
return_type (75)
    on left: 29 30, on right: 22 24
formal_args (76)
    on left: 31 32 33, on right: 22 32
arg (77)
    on left: 34, on right: 31 32
statements (78)
    on left: 35 36, on right: 35 82
statement (79)
    on left: 37 38 39 40 41, on right: 28 35 82
simple_statement (80)
    on left: 42 43 45 47 48 49 50, on right: 37 89
@5 (81)
    on left: 44, on right: 45
@6 (82)
    on left: 46, on right: 47
expression (83)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70, on right: 7 8 9 11 42 43 45 47 49 51 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 77 78 84 92
literal_const (84)
    on left: 71 72 73 74 75, on right: 52
function_invocation (85)
    on left: 76, on right: 53
comma_separated_expression (86)
    on left: 77 78 79, on right: 76 78 96
block (87)
    on left: 81, on right: 38 88
@7 (88)
    on left: 80, on right: 81
one_or_more_statements (89)
    on left: 82, on right: 81
condition (90)
    on left: 84, on right: 39
@8 (91)
    on left: 83, on right: 84
else (92)
    on left: 86 87, on right: 84
@9 (93)
    on left: 85, on right: 86
block_or_simple_statement (94)
    on left: 88 89, on right: 86 87 92 94
loop (95)
    on left: 92 94, on right: 40
@10 (96)
    on left: 90, on right: 92
@11 (97)
    on left: 91, on right: 92
@12 (98)
    on left: 93, on right: 94
procedure_invocation (99)
    on left: 95 96, on right: 41


state 0

    0 $accept: . program $end

    OBJECT  shift, and go to state 1

    program  go to state 2


state 1

    2 program: OBJECT . ID @1 '{' var_const_decs method_decs '}'

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    2 program: OBJECT ID . @1 '{' var_const_decs method_decs '}'

    $default  reduce using rule 1 (@1)

    @1  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 program: OBJECT ID @1 . '{' var_const_decs method_decs '}'

    '{'  shift, and go to state 6


state 6

    2 program: OBJECT ID @1 '{' . var_const_decs method_decs '}'

    VAL  shift, and go to state 7
    VAR  shift, and go to state 8

    $default  reduce using rule 4 (var_const_decs)

    var_const_decs  go to state 9
    var_const_dec   go to state 10
    const_dec       go to state 11
    var_dec         go to state 12


state 7

    7 const_dec: VAL . ID ':' type '=' expression
    8          | VAL . ID '=' expression

    ID  shift, and go to state 13


state 8

    9 var_dec: VAR . ID ':' type '=' expression
   10        | VAR . ID ':' type
   11        | VAR . ID '=' expression
   12        | VAR . ID ':' type '[' CONST_INT ']'

    ID  shift, and go to state 14


state 9

    2 program: OBJECT ID @1 '{' var_const_decs . method_decs '}'

    DEF  shift, and go to state 15

    method_decs  go to state 16
    method_dec   go to state 17


state 10

    3 var_const_decs: var_const_dec . var_const_decs

    VAL  shift, and go to state 7
    VAR  shift, and go to state 8

    $default  reduce using rule 4 (var_const_decs)

    var_const_decs  go to state 18
    var_const_dec   go to state 10
    const_dec       go to state 11
    var_dec         go to state 12


state 11

    5 var_const_dec: const_dec .

    $default  reduce using rule 5 (var_const_dec)


state 12

    6 var_const_dec: var_dec .

    $default  reduce using rule 6 (var_const_dec)


state 13

    7 const_dec: VAL ID . ':' type '=' expression
    8          | VAL ID . '=' expression

    ':'  shift, and go to state 19
    '='  shift, and go to state 20


state 14

    9 var_dec: VAR ID . ':' type '=' expression
   10        | VAR ID . ':' type
   11        | VAR ID . '=' expression
   12        | VAR ID . ':' type '[' CONST_INT ']'

    ':'  shift, and go to state 21
    '='  shift, and go to state 22


state 15

   22 method_dec: DEF . ID @2 '(' formal_args ')' return_type @3 '{' var_const_decs_statements '}'
   24           | DEF . ID return_type @4 '{' var_const_decs_statements '}'

    ID  shift, and go to state 23


state 16

    2 program: OBJECT ID @1 '{' var_const_decs method_decs . '}'

    '}'  shift, and go to state 24


state 17

   18 method_decs: method_dec . method_decs
   19            | method_dec .

    DEF  shift, and go to state 15

    $default  reduce using rule 19 (method_decs)

    method_decs  go to state 25
    method_dec   go to state 17


state 18

    3 var_const_decs: var_const_dec var_const_decs .

    $default  reduce using rule 3 (var_const_decs)


state 19

    7 const_dec: VAL ID ':' . type '=' expression

    BOOLEAN  shift, and go to state 26
    CHAR     shift, and go to state 27
    FLOAT    shift, and go to state 28
    INT      shift, and go to state 29
    STRING   shift, and go to state 30

    type  go to state 31


state 20

    8 const_dec: VAL ID '=' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 41
    literal_const        go to state 42
    function_invocation  go to state 43


state 21

    9 var_dec: VAR ID ':' . type '=' expression
   10        | VAR ID ':' . type
   12        | VAR ID ':' . type '[' CONST_INT ']'

    BOOLEAN  shift, and go to state 26
    CHAR     shift, and go to state 27
    FLOAT    shift, and go to state 28
    INT      shift, and go to state 29
    STRING   shift, and go to state 30

    type  go to state 44


state 22

   11 var_dec: VAR ID '=' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 45
    literal_const        go to state 42
    function_invocation  go to state 43


state 23

   22 method_dec: DEF ID . @2 '(' formal_args ')' return_type @3 '{' var_const_decs_statements '}'
   24           | DEF ID . return_type @4 '{' var_const_decs_statements '}'

    ':'  shift, and go to state 46

    '{'       reduce using rule 30 (return_type)
    $default  reduce using rule 20 (@2)

    @2           go to state 47
    return_type  go to state 48


state 24

    2 program: OBJECT ID @1 '{' var_const_decs method_decs '}' .

    $default  reduce using rule 2 (program)


state 25

   18 method_decs: method_dec method_decs .

    $default  reduce using rule 18 (method_decs)


state 26

   17 type: BOOLEAN .

    $default  reduce using rule 17 (type)


state 27

   15 type: CHAR .

    $default  reduce using rule 15 (type)


state 28

   14 type: FLOAT .

    $default  reduce using rule 14 (type)


state 29

   13 type: INT .

    $default  reduce using rule 13 (type)


state 30

   16 type: STRING .

    $default  reduce using rule 16 (type)


state 31

    7 const_dec: VAL ID ':' type . '=' expression

    '='  shift, and go to state 49


state 32

   68 expression: NOT . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 50
    literal_const        go to state 42
    function_invocation  go to state 43


state 33

   54 expression: ID .
   55           | ID . '[' expression ']'
   76 function_invocation: ID . '(' comma_separated_expression ')'

    '['  shift, and go to state 51
    '('  shift, and go to state 52

    $default  reduce using rule 54 (expression)


state 34

   75 literal_const: CONST_BOOL .

    $default  reduce using rule 75 (literal_const)


state 35

   71 literal_const: CONST_INT .

    $default  reduce using rule 71 (literal_const)


state 36

   72 literal_const: CONST_REAL .

    $default  reduce using rule 72 (literal_const)


state 37

   74 literal_const: CONST_STRING .

    $default  reduce using rule 74 (literal_const)


state 38

   73 literal_const: CONST_CHAR .

    $default  reduce using rule 73 (literal_const)


state 39

   56 expression: '-' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 53
    literal_const        go to state 42
    function_invocation  go to state 43


state 40

   51 expression: '(' . expression ')'

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 54
    literal_const        go to state 42
    function_invocation  go to state 43


state 41

    8 const_dec: VAL ID '=' expression .
   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 8 (const_dec)


state 42

   52 expression: literal_const .

    $default  reduce using rule 52 (expression)


state 43

   53 expression: function_invocation .

    $default  reduce using rule 53 (expression)


state 44

    9 var_dec: VAR ID ':' type . '=' expression
   10        | VAR ID ':' type .
   12        | VAR ID ':' type . '[' CONST_INT ']'

    '='  shift, and go to state 68
    '['  shift, and go to state 69

    $default  reduce using rule 10 (var_dec)


state 45

   11 var_dec: VAR ID '=' expression .
   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 11 (var_dec)


state 46

   29 return_type: ':' . type

    BOOLEAN  shift, and go to state 26
    CHAR     shift, and go to state 27
    FLOAT    shift, and go to state 28
    INT      shift, and go to state 29
    STRING   shift, and go to state 30

    type  go to state 70


state 47

   22 method_dec: DEF ID @2 . '(' formal_args ')' return_type @3 '{' var_const_decs_statements '}'

    '('  shift, and go to state 71


state 48

   24 method_dec: DEF ID return_type . @4 '{' var_const_decs_statements '}'

    $default  reduce using rule 23 (@4)

    @4  go to state 72


state 49

    7 const_dec: VAL ID ':' type '=' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 73
    literal_const        go to state 42
    function_invocation  go to state 43


state 50

   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   68           | NOT expression .
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67

    '%'       [reduce using rule 68 (expression)]
    $default  reduce using rule 68 (expression)


state 51

   55 expression: ID '[' . expression ']'

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 74
    literal_const        go to state 42
    function_invocation  go to state 43


state 52

   76 function_invocation: ID '(' . comma_separated_expression ')'

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    $default  reduce using rule 79 (comma_separated_expression)

    expression                  go to state 75
    literal_const               go to state 42
    function_invocation         go to state 43
    comma_separated_expression  go to state 76


state 53

   56 expression: '-' expression .
   57           | expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    '%'  shift, and go to state 67

    '%'       [reduce using rule 56 (expression)]
    $default  reduce using rule 56 (expression)


state 54

   51 expression: '(' expression . ')'
   57           | expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ')'  shift, and go to state 77
    '%'  shift, and go to state 67


state 55

   62 expression: expression LT . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 78
    literal_const        go to state 42
    function_invocation  go to state 43


state 56

   63 expression: expression LE . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 79
    literal_const        go to state 42
    function_invocation  go to state 43


state 57

   64 expression: expression GT . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 80
    literal_const        go to state 42
    function_invocation  go to state 43


state 58

   65 expression: expression GE . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 81
    literal_const        go to state 42
    function_invocation  go to state 43


state 59

   67 expression: expression NE . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 82
    literal_const        go to state 42
    function_invocation  go to state 43


state 60

   66 expression: expression EE . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 83
    literal_const        go to state 42
    function_invocation  go to state 43


state 61

   69 expression: expression AND . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 84
    literal_const        go to state 42
    function_invocation  go to state 43


state 62

   70 expression: expression OR . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 85
    literal_const        go to state 42
    function_invocation  go to state 43


state 63

   60 expression: expression '+' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 86
    literal_const        go to state 42
    function_invocation  go to state 43


state 64

   61 expression: expression '-' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 87
    literal_const        go to state 42
    function_invocation  go to state 43


state 65

   58 expression: expression '*' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 88
    literal_const        go to state 42
    function_invocation  go to state 43


state 66

   59 expression: expression '/' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 89
    literal_const        go to state 42
    function_invocation  go to state 43


state 67

   57 expression: expression '%' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 90
    literal_const        go to state 42
    function_invocation  go to state 43


state 68

    9 var_dec: VAR ID ':' type '=' . expression

    NOT           shift, and go to state 32
    ID            shift, and go to state 33
    CONST_BOOL    shift, and go to state 34
    CONST_INT     shift, and go to state 35
    CONST_REAL    shift, and go to state 36
    CONST_STRING  shift, and go to state 37
    CONST_CHAR    shift, and go to state 38
    '-'           shift, and go to state 39
    '('           shift, and go to state 40

    expression           go to state 91
    literal_const        go to state 42
    function_invocation  go to state 43


state 69

   12 var_dec: VAR ID ':' type '[' . CONST_INT ']'

    CONST_INT  shift, and go to state 92


state 70

   29 return_type: ':' type .

    $default  reduce using rule 29 (return_type)


state 71

   22 method_dec: DEF ID @2 '(' . formal_args ')' return_type @3 '{' var_const_decs_statements '}'

    ID  shift, and go to state 93

    $default  reduce using rule 33 (formal_args)

    formal_args  go to state 94
    arg          go to state 95


state 72

   24 method_dec: DEF ID return_type @4 . '{' var_const_decs_statements '}'

    '{'  shift, and go to state 96


state 73

    7 const_dec: VAL ID ':' type '=' expression .
   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67

    $default  reduce using rule 7 (const_dec)


state 74

   55 expression: ID '[' expression . ']'
   57           | expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ']'  shift, and go to state 97
    '%'  shift, and go to state 67


state 75

   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression
   77 comma_separated_expression: expression .
   78                           | expression . ',' comma_separated_expression

    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58
    NE   shift, and go to state 59
    EE   shift, and go to state 60
    AND  shift, and go to state 61
    OR   shift, and go to state 62
    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    ','  shift, and go to state 98
    '%'  shift, and go to state 67

    $default  reduce using rule 77 (comma_separated_expression)


state 76

   76 function_invocation: ID '(' comma_separated_expression . ')'

    ')'  shift, and go to state 99


state 77

   51 expression: '(' expression ')' .

    $default  reduce using rule 51 (expression)


state 78

   57 expression: expression . '%' expression
   58           | expression . '*' expression
   59           | expression . '/' expression
   60           | expression . '+' expression
   61           | expression . '-' expression
   62           | expression . LT expression
   62           | expression LT expression .
   63           | expression . LE expression
   64           | expression . GT expression
   65           | expression . GE expression
   66           | expression . EE expression
   67           | expression . NE expression
   69           | expression . AND expression
   70           | expression . OR expression

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67

    '%'       [reduce using rule 62 (expression)]
    $default  reduce using rule 62 (expression)


state 79
